change app name

--- a/web/index.html
+++ b/web/index.html
@@ -19,18 +19,18 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="Master the markets without the risk - Paper Trade">
 
   <!-- iOS meta tags & icons -->
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="paper_trade_app">
+  <meta name="apple-mobile-web-app-title" content="Paper Trade">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png" />
 
-  <title>paper_trade_app</title>
+  <title>Paper Trade</title>
   <link rel="manifest" href="manifest.json">
 
   <!-- Firebase SDKs -->
